# v8-ball-detector

./: .gitignore  CMakeLists.txt  README.md  calibration.cpp  go.cpp
data/: bola.xml  bola_lbp_standar.xml  color_table.xml  v8_ball_detector_config.yaml
include/classifier_wrapper/: adaboost_wrapper.hpp  classifier_wrapper.hpp  svm_wrapper.hpp
include/distance_weighting/: distance_weighting.hpp
include/fitting/: fitcircle.cpp  fitcircle.h
include/lbp/: lbp.hpp
include/v8_ball_detector/: ball_detector.hpp
